<resources>
    <string name="app_name">Waves OF Foods</string>
    <string name="deliver_favourite_food">Deliver Favorite Food</string>
    <string name="waves_of_food">Waves of Food</string>
    <string name="deliver_favourite">Deliver Favourite Food</string>
    <string name="design_by_nasir_akram">Design By\nNasir Akram</string>
    <string name="next">Next</string>
    <string name="enjoy_restaurant_quality_meals_nat_home">Enjoy Restaurant Quality Meals \nat Home</string>
    <string name="design_by_n_nasir_akram">Design By\n Nasir Akram</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="continue_with">Continue With</string>
    <string name="don_t_have_account">Don\'t Have Account?</string>
    <string name="deliver">Deliver Favourite Food</string>
    <string name="or">Or</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="go">Google</string>
    <string name="create_account">Create Account</string>
    <string name="pass">Password</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="uu">Waves of Food</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="and">Or</string>
    <string name="sign_up_with">Sign Up With</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_5">$5</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="food_name">Food Name</string>
    <string name="image">Image</string>
    <string name="card_title">Card Title</string>
    <string name="popular">Popular</string>
    <string name="view_menu">View Menu</string>
    <string name="explore_your_favourite_food">Explore Your Favourite Food</string>
    <string name="textview">TextView</string>
    <string name="text">TextView</string>
    <string name="_1">1</string>
    <string name="proceed">Proceed</string>
    <string name="cart">Cart</string>
    <string name="choose_location">Choose Location</string>
    <string name="choose_your_location">Choose Your Location</string>
    <string name="to_provide_you_with_the_best_dining_experience_we_need_your_permission_to_access_your_device_location_by_enabling_location_services_we_can_offer_personalized_restaurant_recommendations_accurate_delivery_estimates_and_ensure_a_seamless_food_delivery_experience">To provide you with the best dining experience, We need your permission to access your device location. By enabling location services, we can offer personalized restaurant recommendations, accurate delivery estimates, and ensure a seamless food delivery experience.</string>
    <string name="design_by_nnasir_akram">Design By \nNasir Akram</string>
    <string name="car">Cart</string>
    <string name="buy_again">Buy Again</string>
    <string name="foodname">FoodName</string>
    <string name="_54">$5</string>
    <string name="foodname1">FoodName</string>
    <string name="name2">$5</string>
    <string name="recent_buy">Recent Buy</string>
    <string name="to">Recent By</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectutor_adjcing_is_to_food_details_all_information_about_the_food_and_recipe_all_food_in_the_text">Lorem ipsum dolor sit amet, consectutor adjcing is to food details all information about the food and recipe all food in the text</string>
    <string name="foodname2">FoodName</string>
    <string name="ingredient">Ingredient</string>
    <string name="short_descripation">Short descripation</string>
    <string name="_1_item_n2_item_n3_item">1 item\n2 item\n3 item</string>
    <string name="name23">Name</string>
    <string name="this_edit_text_is_used_for_address_in_the_projetc_we_can_used_edit_text_for_multilines">This edit text is used for address in the projetc.We can used edit text for multilines</string>
    <string name="_123456789">123456789</string>
    <string name="nasir">$5</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="payment_method">Payment Method</string>
    <string name="total_amount">Total Amount</string>
    <string name="place_my_order">Place My Order</string>
    <string name="button">Button</string>
    <string name="edit">Edit</string>
    <string name="congrats_nyour_order_placed">Congrats \nYour Order Placed</string>
    <string name="menu">Menu</string>
    <string name="notification">Notification</string>
    <string name="admin">admin</string>
    <string name="namelorem_ipsum_is_a_placeholder_text_commonly_used_for_previewing_layouts_and_visual">NameLorem ipsum is a placeholder text commonly used for previewing layouts and visual</string>
    <string name="admin_gmail_com">admin@gmail.com</string>
    <string name="_1234567890">1234567890</string>
    <string name="phone2">Phone</string>
    <string name="save_information">Save Information</string>
    <string name="text2">TextView</string>
    <string name="recent_buy2">Recent buy</string>
    <string name="received">Received</string>
    <string name="search">Search</string>
    <string name="menu2">Menu</string>
    <string name="address2">Address</string>
</resources>