<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PayOutActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/backbutton"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:background="@android:color/transparent"
            android:scaleType="centerCrop"
            android:src="@drawable/arrow_left"
            android:text="@string/button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription,ImageContrastCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/yeonsung_regular"
            android:text="@string/edit"
            android:textColor="#1FC57A"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button5"
            tools:ignore="TextContrastCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/profileedittextshape"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="105dp"
            tools:ignore="MissingConstraints">

            <TextView
                android:textColor="@color/black"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="8dp"
                android:text="Name"
                tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:ems="10"
                android:fontFamily="@font/lato_regular"
                android:inputType="text"
                android:text="@string/name23"
                android:textColor="@color/black"
                tools:ignore="Autofill,DuplicateSpeakableTextCheck,LabelFor,VisualLintTextFieldSize" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/profileedittextshape"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="105dp"
            tools:ignore="MissingConstraints">

            <TextView
                android:textColor="@color/black"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="8dp"
                android:text="@string/address"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:ems="10"
                android:fontFamily="@font/lato_regular"
                android:inputType="textMultiLine"
                android:text="@string/this_edit_text_is_used_for_address_in_the_projetc_we_can_used_edit_text_for_multilines"
                tools:ignore="Autofill,LabelFor,VisualLintTextFieldSize" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/profileedittextshape"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="105dp"
            tools:ignore="MissingConstraints">

            <TextView
                android:textColor="@color/black"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="8dp"
                android:text="@string/phone"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:ems="10"
                android:fontFamily="@font/lato_regular"
                android:inputType="phone"
                android:text="@string/_123456789"
                tools:ignore="Autofill,LabelFor,VisualLintTextFieldSize" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/profileedittextshape"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="105dp"
            tools:ignore="MissingConstraints">


            <TextView
                android:textColor="@color/black"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="8dp"
                android:text="@string/payment_method"
                tools:ignore="RtlSymmetry" />
            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/cashondelivery"
                tools:ignore="ContentDescription" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/profileedittextshape"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="105dp"
            tools:ignore="MissingConstraints">

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/yeonsung_regular"
                android:paddingStart="8dp"
                android:text="@string/total_amount"
                android:textColor="@color/black"
                tools:ignore="RtlSymmetry,TextSizeCheck" />

            <EditText

                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:ems="10"
                android:fontFamily="@font/yeonsung_regular"
                android:gravity="end"
                android:inputType="none"
                android:paddingEnd="32dp"
                android:text="@string/nasir"
                android:textColor="#43A047"
                android:textSize="20sp"
                tools:ignore="Autofill,LabelFor,RtlSymmetry,TextSizeCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />
        </LinearLayout>


    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/PlaceMyOrder"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="bottom"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/edittextshape"
        android:fontFamily="@font/yeonsung_regular"
        android:text="@string/place_my_order"
        android:textAllCaps="false"
        android:textColor="#2E7D32"
        tools:ignore="VisualLintButtonSize" />

</FrameLayout>